# remipedia

./: .clippy.toml  .dockerignore  .gitignore  ARCHITECTURE.md  BACKEND_GUIDE.md  Cargo.toml  DEPLOY.md  Dockerfile  IMPROVEMENTS.md  PRIORITY_ANALYSIS.md  README.md  SETUP.md  TODO.md  deploy.sh  docker-compose.yml  init.sql  mosquitto.conf  nginx-iomt-ssl.conf  nginx-iomt.conf
.github/workflows/: ci.yml  deploy.yml
config/: default.yaml  local.yaml
docs/: ADAPTERS.md  INGEST_LAYER_AUDIT.md  MQTT_DATA_GUIDE.md  bed.md  fall_detector_integration.md  mvp_convergence_design.md  old.md  smart_mattress_integration.md  system_analysis.md
migrations/: 20260321000000_init.down.sql  20260321000000_init.up.sql  20260321100000_refresh_token.up.sql  20260331100000_rbac_audit.down.sql  20260331100000_rbac_audit.up.sql  20260401000000_unified_datasheet.down.sql  20260401000000_unified_datasheet.up.sql  20260402093000_ingest_raw_archive.down.sql  20260402093000_ingest_raw_archive.up.sql  20260407000000_module_based_rbac.down.sql  20260407000000_module_based_rbac.up.sql
src/: lib.rs  main.rs
src/api/: mod.rs  openapi.rs
src/api/guards/: auth.rs  auth_test.rs  mod.rs
src/api/routes/: admin.rs  auth.rs  binding.rs  data.rs  device.rs  device_manage.rs  health.rs  ingest.rs  mod.rs  patient.rs  user.rs
src/application/: auth.rs  binding.rs  device.rs  healthdata.rs  mod.rs  patient.rs  user.rs
src/config/: settings.rs
src/core/: mod.rs
src/core/auth/: claims.rs  claims_test.rs  mod.rs
src/core/domain/: mod.rs
src/core/entity/: audit_log.rs  audit_log_test.rs  binding.rs  datasheet.rs  device.rs  mod.rs  module.rs  patient.rs  permission.rs  raw_data.rs  refresh_token.rs  role.rs  role_test.rs  user.rs
src/core/value_object/: data_type.rs  device_type.rs  device_type_test.rs  mod.rs  module.rs  user_role.rs
src/dto/: convert.rs  mod.rs
src/dto/request/: auth.rs  data.rs  device.rs  mod.rs  patient.rs  (+1 more)
src/errors/: app_error.rs  app_error_test.rs  mod.rs
src/infrastructure/: mod.rs
src/ingest/: README.md  adapter.rs  adapter_manager.rs  device_manager.rs  event.rs  framework.rs  mod.rs  mqtt_client.rs  pipeline.rs  protocol.rs  resolver.rs  state.rs  tcp_server.rs
src/repository/: audit_log.rs  base.rs  binding.rs  data.rs  device.rs  mod.rs  module_permission.rs  patient.rs  permission.rs  raw_data.rs  refresh_token.rs  role.rs  user.rs
src/service/: admin.rs  auth.rs  binding.rs  converter.rs  data.rs  device.rs  ingest_raw.rs  mod.rs  patient.rs  user.rs
src/utils/: time.rs
(+77 files in other folders)
