[package]
name = "remipedia"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web 框架
rocket = { version = "0.5", features = ["json"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid", "json", "macros"] }

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# 配置
config = "0.14"

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
thiserror = "2"
anyhow = "1"

# MQTT（数据接入）
rumqttc = "0.24"

# 密码哈希
argon2 = "0.5"

# JWT
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

# 哈希
sha2 = "0.10"

# MessagePack 解析
rmp = "0.8"
rmp-serde = "1.1"

# byte buffer
bytes = "1"

# CRC 校验
crc = "3.0"

# 验证
validator = { version = "0.18", features = ["derive"] }

# 高精度数值
rust_decimal = { version = "1.35", features = ["db-postgres", "serde"] }

# 异步 trait
async-trait = "0.1"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["rocket", "vendored"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"
strip = true
